@@ -1,3 +1,9 @@
+2010-08-25  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-sbcl.lisp (exec-image): Use (car sb-ext:*posix-argv*) if
+	SBCL doesn't have sb-ext:*runtime-pathname*.
+	Reported by Vinay.
+
 2010-08-22  Stas Boukarev  <stassats@gmail.com>
 
 	* slime.el (slime-xemacs-recompute-modelines): Add
